# feedback-app-backend

./: README.md
feedback-app-backend/: Makefile  pyproject.toml
feedback-app-backend/app/: interfaces.py  main.py  models.py  services.py  stores.py
feedback-app-backend/tests/: test_services.py  test_stores.py  test_web.py
