[tool.poetry]
name = "feedback-app-backend"
version = "0.1.0"
description = ""
authors = ["Dennis van Bohemen <Dennis.Van.Bohemen@topicus.nl>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.70.0"
uvicorn = "^0.15.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.12b0"
flake8 = "^4.0.1"
isort = "^5.10.1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
